--- a/app/module/video-panel/element/view/resource-upsert.html
+++ b/app/module/video-panel/element/view/resource-upsert.html
@@ -15,7 +15,7 @@
 <link rel="import" href="../../../../bower_components/paper-progress/paper-progress.html">
 
 <link rel="import" href="../../../../element/file-upload/file-upload.html">
-<link rel="import" href="../../../../element/layout/view/storage-behaviour.html">
+<link rel="import" href="../../../../element/storage/storage-adapter-resource-behaviour.html">
 
 <link rel="import" href="../../../../css/global-layout.html">
 <link rel="import" href="../../../../css/global-styles.html">
@@ -164,7 +164,7 @@
     </template>
 
     <script>
-        class ElementVideoPanelViewResourceUpsert extends StorageBehaviour {
+        class ElementVideoPanelViewResourceUpsert extends StorageAdapterResourceBehaviour {
 
             static get is() {
                 return 'video-panel-view-resource-upsert';
@@ -398,7 +398,7 @@
             submitPanelResource(evt) {
                 evt.preventDefault();
 
-                let method = this.getStorageMethod();
+                let method = this.getStoragePersistMethod();
                 this.storage[method](this.resource)
                     .then((data) => {
                         serviceManager.get('PaperToastNotification').notify(method.charAt(0).toUpperCase() + method.slice(1) + ' video panel resource');
