--- a/app/module/video-panel/element/view/list.html
+++ b/app/module/video-panel/element/view/list.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../../../../bower_components/polymer/polymer.html">
+tra<link rel="import" href="../../../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../../../../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../../../../bower_components/paper-card/paper-card.html">
@@ -7,7 +7,8 @@
 <link rel="import" href="../../../../css/global-layout.html">
 <link rel="import" href="../../../../css/global-styles.html">
 <link rel="import" href="../../../../element/pagination/pagination.html">
-<link rel="import" href="../../../../element/layout/view/storage-behaviour.html">
+
+<link rel="import" href="../../../../element/storage/storage-adapter-pagination-resource-behaviour.html">
 <link rel="import" href="../video-panel/video-panel.html">
 
 <dom-module id="video-panel-view-list">
@@ -24,7 +25,7 @@
         <slot name="header"></slot>
         <div hidden$="{{!totalItems}}">
             <template is="dom-repeat" items="[[resources]]" as="panel">
-                <video-panel-wc panel="{{panel}}" on-update-view="displayUpdateView" on-remove="removeResource"></video-panel-wc>
+                <video-panel-wc panel="{{panel}}" on-update-view="displayUpdateView" on-remove="_removeResource"></video-panel-wc>
             </template>
             <application-pagination page="{{page}}" total-item="{{totalItems}}" item-per-page="{{itemPerPage}}"></application-pagination>
         </div>
@@ -34,7 +35,7 @@
     </template>
 
     <script>
-        class ElementVideoPanelViewList extends StorageBehaviour {
+        class ElementVideoPanelViewList extends StorageAdapterPaginationResourceBehaviour {
 
             static get is() {
                 return 'video-panel-view-list';
@@ -61,6 +62,11 @@
 
                     },
                 };
+            }
+
+            ready() {
+                super.ready();
+                this.addStorageListener(dsign.storage.Storage.STORAGE_POST_SAVE, this.getResources.bind(this))
             }
 
             /**
