--- a/app/module/timeslot/element/view/list.html
+++ b/app/module/timeslot/element/view/list.html
@@ -10,6 +10,8 @@
 <link rel="import" href="../../element/iconset/iconset.html">
 <link rel="import" href="../timeslot/timeslot.html">
 <link rel="import" href="../../../../element/pagination/pagination.html">
+<link rel="import" href="../../../../element/storage/storage-adapter-pagination-resource-behaviour.html">
+
 
 <dom-module id="timeslot-view-list">
     <template>
@@ -23,26 +25,27 @@
         </style>
         <slot name="header"></slot>
         <div hidden$="{{!hasResources}}">
-            <template is="dom-repeat" items="[[timeslots]]" as="timeslot">
+            <template is="dom-repeat" items="[[resources]]" as="timeslot">
                 <timeslot-wc
                         timeslot="{{timeslot}}"
                         on-play="play"
                         on-resume="resume"
                         on-stop="stop"
                         on-pause="pause"
-                        on-wrap-update="displayUpdateView"
-                        on-wrap-update-timeslot="update"
-                        on-wrap-remove="remove">
+                        on-update-view="displayUpdateView"
+                        on-remove="_removeResource"
+                        on-change-rotation="_updateResource"
+                        on-change-context="_updateResource">
                 </timeslot-wc>
             </template>
             <application-pagination page="{{page}}" total-item="{{totalItems}}" item-per-page="{{itemPerPage}}"></application-pagination>
         </div>
-        <div hidden$="{{hasResources}}">
+        <div hidden$="{{totalItems}}">
             Non sono presenti timeslot
         </div>
     </template>
     <script>
-        class ElementTimeslotViewList extends Polymer.Element {
+        class ElementTimeslotViewList extends StorageAdapterPaginationResourceBehaviour {
 
             static get is() {
                 return 'timeslot-view-list';
@@ -51,12 +54,7 @@
             static get properties() {
                 return {
 
-                    timeslots: {
-                        type: Array,
-                        value: []
-                    },
-
-                    timeslotSelected: {
+                    resourceSelected: {
                         type: Object,
                         notify: true,
                         value: {}
@@ -67,95 +65,18 @@
                         notify: true
                     },
 
-                    page: {
-                        type: Number,
-                        value: 1
-                    },
+                    storageName: {
+                        type: String,
+                        readOnly: true,
+                        value: TimeslotConfig.NAME_SERVICE
 
-                    itemPerPage: {
-                        type: Number,
-                        value: 20
                     },
-
-                    totalItem: {
-                        type: Number,
-                    }
                 };
             }
 
-
             ready() {
                 super.ready();
-
-                serviceManager.get('StoragePluginManager')
-                    .get(TimeslotConfig.NAME_SERVICE)
-                    .eventManager.on(dsign.storage.Storage.STORAGE_POST_SAVE, this._loadResource.bind(this)
-                );
-
-                serviceManager.get('StoragePluginManager')
-                    .get(TimeslotConfig.NAME_SERVICE)
-                    .eventManager.on(dsign.storage.Storage.STORAGE_POST_UPDATE, this._loadResource.bind(this)
-                );
-
-                this._loadResource();
-            }
-
-            static get observers() {
-                return [
-                    '_queryTimeslots(page, itemPerPage)'
-                ]
-            }
-
-            _queryTimeslots(page, itemPerPage) {
-                if (page === undefined || itemPerPage === undefined) {
-                    return;
-                }
-                this._loadResource();
-            }
-
-            _loadResource() {
-
-                serviceManager.get('StoragePluginManager')
-                    .get(TimeslotConfig.NAME_SERVICE)
-                    .getPaged(this.page, this.itemPerPage)
-                    .then((data) => {
-                        this.set('timeslots', data);
-                        this.hasResources = data.length > 0;
-                        this.totalItems = data.totalItems;
-                    });
-            }
-
-            /**
-             * @param event
-             */
-            remove(evt) {
-
-                let index = null;
-                let element = this.timeslots.find((element, ind) => {
-                    if (element.id === evt.detail.id) {
-                        index = ind;
-                        return element;
-                    }
-                });
-
-                this.splice('timeslots', index, 1);
-                this.hasResources = this.timeslots.length > 0;
-
-                serviceManager.get('StoragePluginManager')
-                    .get(TimeslotConfig.NAME_SERVICE)
-                    .remove(evt.detail)
-                    .then((data) => {
-                        serviceManager.get('PaperToastNotification').notify('Remove timeslot')
-                    });
-            }
-
-            update(evt) {
-                serviceManager.get('StoragePluginManager')
-                    .get(TimeslotConfig.NAME_SERVICE)
-                    .update(evt.detail)
-                    .then((data) => {
-                        serviceManager.get('PaperToastNotification').notify('Update timeslot ' + data.name)
-                    });
+                this.addStorageListener(dsign.storage.Storage.STORAGE_POST_SAVE, this.getResources.bind(this))
             }
 
             /**
@@ -198,7 +119,7 @@
              * @param evt
              */
             displayUpdateView(evt) {
-                this.timeslotSelected = evt.detail;
+                this.resourceSelected = evt.detail;
                 this.selected = 2;
             }
         }
