--- a/app/module/resource/element/view/list.html
+++ b/app/module/resource/element/view/list.html
@@ -10,6 +10,8 @@
 <link rel="import" href="../../../../css/global-styles.html">
 <link rel="import" href="../../../../element/pagination/pagination.html">
 
+<link rel="import" href="../../../../element/storage/storage-adapter-pagination-resource-behaviour.html">
+
 <dom-module id="resource-view-list">
     <template>
         <style include="global-layout"></style>
@@ -24,21 +26,17 @@
         <slot name="header"></slot>
         <div hidden$="{{!hasResources}}">
             <template is="dom-repeat" items="[[resources]]" as="resource">
-                <resource-wc
-                        resource="{{resource}}"
-                        on-update-view="displayUpdateView"
-                        on-remove="remove">
-                </resource-wc>
+                <resource-wc resource="{{resource}}" on-update-view="displayUpdateView" on-remove="_removeResource"></resource-wc>
             </template>
             <application-pagination page="{{page}}" total-item="{{totalItems}}" item-per-page="{{itemPerPage}}"></application-pagination>
         </div>
-        <div hidden$="{{hasResources}}">
+        <div hidden$="{{totalItems}}">
             Non sono presenti risorse
         </div>
     </template>
 
     <script>
-        class ElementResourceViewList extends Polymer.Element {
+        class ElementResourceViewList extends StorageAdapterPaginationResourceBehaviour {
 
             static get is() {
                 return 'resource-view-list';
@@ -46,11 +44,6 @@
 
             static get properties() {
                 return {
-
-                    resources: {
-                        type: Array,
-                        value: []
-                    },
 
                     resourceSelected: {
                         type: Object,
@@ -63,83 +56,20 @@
                         notify: true
                     },
 
-                    page: {
-                        type: Number,
-                        value: 1
-                    },
+                    storageName: {
+                        type: String,
+                        readOnly: true,
+                        value: ResourceConfig.NAME_SERVICE
 
-                    itemPerPage: {
-                        type: Number,
-                        value: 20
-                    },
-
-                    totalItem: {
-                        type: Number,
                     },
                 };
             }
 
-            static get observers() {
-                return [
-                    '_queryResources(page, itemPerPage)'
-                ]
-            }
-
             ready() {
                 super.ready();
-                serviceManager.get('StoragePluginManager')
-                    .get(ResourceConfig.NAME_SERVICE)
-                    .eventManager.on(dsign.storage.Storage.STORAGE_POST_SAVE, this._getResources.bind(this)
-                );
-
-                serviceManager.get('StoragePluginManager')
-                    .get(ResourceConfig.NAME_SERVICE)
-                    .eventManager.on(dsign.storage.Storage.STORAGE_POST_UPDATE, this._getResources.bind(this)
-                );
+                this.addStorageListener(dsign.storage.Storage.STORAGE_POST_SAVE, this.getResources.bind(this))
             }
 
-            _queryResources(page, itemPerPage) {
-                if (page === undefined || itemPerPage === undefined) {
-                    return;
-                }
-                this._getResources();
-            }
-
-            _getResources() {
-
-                serviceManager.get('StoragePluginManager')
-                    .get(ResourceConfig.NAME_SERVICE)
-                    .getPaged(this.page, this.itemPerPage)
-                    .then((data) => {
-                        this.set('resources', data);
-                        this.hasResources = data.length > 0;
-                        this.totalItems = data.totalItems;
-                    });
-            }
-
-            /**
-             * @param evt
-             */
-            remove(evt) {
-
-                serviceManager.get('StoragePluginManager')
-                    .get(ResourceConfig.NAME_SERVICE)
-                    .remove(evt.detail)
-                    .then((data) => {
-                        serviceManager.get('PaperToastNotification').notify('Remove resource');
-
-                        let index = null;
-                        this.resources.find((element, ind) => {
-                            if (element.id === evt.detail.id) {
-                                index = ind;
-                                return element;
-                            }
-                        });
-
-                        this.splice('resources', index, 1);
-                        this.hasResources = this.resources.length > 0;
-                    });
-            }
 
             /**
              * @param evt
