--- a/app/module/playlist/element/view/list.html
+++ b/app/module/playlist/element/view/list.html
@@ -8,6 +8,7 @@
 <link rel="import" href="../../../../css/global-styles.html">
 <link rel="import" href="../../element/playlist/playlist.html">
 <link rel="import" href="../../../../element/pagination/pagination.html">
+<link rel="import" href="../../../../element/storage/storage-adapter-pagination-resource-behaviour.html">
 
 
 <dom-module id="playlist-view-list">
@@ -18,28 +19,30 @@
 
         </style>
         <slot name="header"></slot>
-        <div hidden$="{{!hasResources}}" style="padding-top: 20px;">
-            <template is="dom-repeat" items="[[playlists]]" as="playlist">
+        <div hidden$="{{!totalItems}}" style="padding-top: 20px;">
+            <template is="dom-repeat" items="[[resources]]" as="playlist">
                 <playlist-wc
                         playlist="{{playlist}}"
-                        on-wrap-remove="remove"
-                        on-wrap-update="displayUpdateView"
+                        on-remove="_removeResource"
+                        on-update-view="displayUpdateView"
                         on-wrap-update-playlist="update"
                         on-play="play"
                         on-stop="stop"
                         on-pause="pause"
-                        on-resume="resume">
+                        on-resume="resume"
+                        on-change-rotation="_updateResource"
+                        on-change-context="_updateResource">
                 </playlist-wc>
             </template>
             <application-pagination page="{{page}}" total-item="{{totalItems}}" item-per-page="{{itemPerPage}}"></application-pagination>
         </div>
-        <div hidden$="{{hasResources}}">
+        <div hidden$="{{totalItems}}">
             Non sono presenti playlist
         </div>
     </template>
 
     <script>
-        class ElementPlaylistViewList extends Polymer.Element {
+        class ElementPlaylistViewList extends StorageAdapterPaginationResourceBehaviour {
 
             static get is() {
                 return 'playlist-view-list';
@@ -48,13 +51,7 @@
             static get properties() {
                 return {
 
-                    playlists: {
-                        type: Array,
-                        notify: true,
-                        value: []
-                    },
-
-                    playlistSelected: {
+                    resourceSelected: {
                         type: Object,
                         notify: true,
                         value: {}
@@ -65,91 +62,18 @@
                         notify: true
                     },
 
-                    page: {
-                        type: Number,
-                        value: 1
-                    },
+                    storageName: {
+                        type: String,
+                        readOnly: true,
+                        value: PlaylistConfig.NAME_SERVICE
 
-                    itemPerPage: {
-                        type: Number,
-                        value: 20
-                    },
-
-                    totalItems: {
-                        type: Number,
                     }
                 };
             }
 
             ready() {
                 super.ready();
-                serviceManager.get('StoragePluginManager')
-                    .get(PlaylistConfig.NAME_SERVICE)
-                    .eventManager.on(dsign.storage.Storage.STORAGE_POST_SAVE, this._loadResource.bind(this)
-                );
-
-                serviceManager.get('StoragePluginManager')
-                    .get(PlaylistConfig.NAME_SERVICE)
-                    .eventManager.on(dsign.storage.Storage.STORAGE_POST_UPDATE, this._loadResource.bind(this)
-                );
-            }
-
-            static get observers() {
-                return [
-                    '_queryPlayists(page, itemPerPage)'
-                ]
-            }
-
-            _queryPlayists(page, itemPerPage) {
-                if (page === undefined || itemPerPage === undefined) {
-                    return;
-                }
-                this._loadResource();
-            }
-
-            _loadResource() {
-                serviceManager.get('StoragePluginManager')
-                    .get(PlaylistConfig.NAME_SERVICE)
-                    .getPaged(this.page, this.itemPerPage)
-                    .then((data) => {
-                        this.set('playlists', data);
-                        this.hasResources = data.length > 0;
-                        this.totalItems = data.totalItems;
-                    });
-            }
-
-            update(evt) {
-                serviceManager.get('StoragePluginManager')
-                    .get(PlaylistConfig.NAME_SERVICE)
-                    .update(evt.detail)
-                    .then((data) => {
-                        serviceManager.get('PaperToastNotification').notify('Update playlist ' + data.name)
-                    });
-            }
-
-            remove(evt) {
-
-                let index = -1;
-                let element = this.playlists.find((element, ind) => {
-                    if (element.id === evt.detail.id) {
-                        index = ind;
-                        return element;
-                    }
-                });
-
-                if (index < 0) {
-                    return;
-                }
-
-                this.splice('playlists', index, 1);
-                this.hasResources = this.playlists.length > 0;
-
-                serviceManager.get('StoragePluginManager')
-                    .get(PlaylistConfig.NAME_SERVICE)
-                    .remove(evt.detail)
-                    .then((data) => {
-                        serviceManager.get('PaperToastNotification').notify('Remove playlist')
-                    });
+                this.addStorageListener(dsign.storage.Storage.STORAGE_POST_SAVE, this.getResources.bind(this))
             }
 
             /**
@@ -189,7 +113,7 @@
             }
 
             displayUpdateView(evt) {
-                this.playlistSelected = evt.detail;
+                this.resourceSelected = evt.detail;
                 this.selected = 2;
             }
         }
